package com.academia.repository;

import com.academia.model.Student;

public interface IStudentRepository extends IGenericRepo<Student, Integer> {
}