package com.academia.service;

import com.academia.model.Student;

public interface IStudentService extends ICRUD<Student, Integer> {
}